--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: "Comic Sans MS", cursive, sans-serif;
+      font-family: "Segoe UI", cursive, sans-serif;
       height: 100vh;
       background: linear-gradient(135deg, #fcd34d, #f9a8d4);
     }
@@ -263,4 +263,5 @@
     atualizarLista();
   </script>
 </body>
+
 </html>
